--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -66,6 +66,9 @@
 @media (max-width: 790px) {
   .Header {
     .content {
+      .logo img {
+        width: 80%;
+      }
       .nav {
         display: none;
       }
