--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -67,7 +67,8 @@
   .Header {
     .content {
       .logo img {
-        width: 10%;
+        max-width: 20px;
+        width: 100%;
       }
       .nav {
         display: none;
