--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,9 @@ body {
   max-width: 1280px;
   margin-inline: auto;
   padding-inline: 40px;
+  @media (max-width: 500px) {
+    padding-inline: 20px;
+  }
 }
 
 h1,
