--- a/src/index.scss
+++ b/src/index.scss
@@ -9,16 +9,12 @@
 body {
   background: #2b2b2b;
 }
-
-.Header {
-  .container {
-    width: 100%;
-    max-width: 1280px;
-    margin-inline: auto;
-    padding-inline: 20px;
-  }
+.header_container {
+  width: 100%;
+  max-width: 1280px;
+  margin-inline: auto;
+  padding-inline: 20px;
 }
-
 .container {
   width: 100%;
   max-width: 1280px;
